# variantc

./: CMakeLists.txt  TODO.txt  readme.md
docs/: inspiration  notes  references  test.asm  test.ir  todo  verifying-assembly-instructions
docs/lang-docs/: README.md  keywords.md  operators.md  types.md
docs/lang-docs/introduction/: installation.md  overview.md  syntax-basics.md
docs/lang-docs/language-reference/functions/: async-await.md  delegates.md  functions.md  lambdas.md  operator-overloading.md
docs/lang-docs/language-reference/ir/: intermediate-representation.md
docs/lang-docs/language-reference/types/: arrays.md  bit-fields.md  casting.md  enums.md  primitive-types.md  structs.md  tuples.md  unions.md
docs/lang-docs/language-reference/variables/: basic-variables.md  memory-alignment.md
docs/lang/lang/: all_lang_cat.vc  async_await.vc  casting.vc  compile_time_vm.vc  deconstruct.vc  enums.vc  extention_methods.vc  functions.vc  lambda operators.vc  memory alignment.vc  metadata.vc  method_extentions.vc  namespaces.vc  new.vc  stack_vs_heap.vc  string-literals.vc  string_operators.vc  strings.vc  syntax_errors.vc  templates.vc  tuples and multi returns.vc  type rules.vc
docs/lang/needs-sorting/langdoc/: Compile_Time_Execution.txt  Operators.txt  TODO.txt
docs/lang/needs-sorting/langdoc/Declarations/: Enums.txt  Functions.txt  Structures.txt  Unions.txt
docs/lang/needs-sorting/langdoc/Operators/: Null_coalescing.txt
docs/lang/needs-sorting/langdoc2/: Variables.txt
docs/lang/needs-sorting/langdoc2/Declarations/: Enums.txt
docs/lang/needs-sorting/langdoc2/Variables/: Initialization.txt  User_Defined_Types.txt
docs/lang/vc-old/include/vc/: vm.h
docs/lang/vc-old/lib/vc/: CMakeLists.txt  lexer.cpp  vm.cpp
docs/lang/vc-old/lib/vc/parser/: parse_expr.cpp
docs/lang/vc-old/lib/vc/validation/: val_decl.cpp
docs/language-reference/: keywords.md  operators.md  types.md
docs/old-lang-docs/lang/: calling-conventions.vc  compile-time-execution.vc  covariant_generic_interface.vc  defer.vc  implicit_explicit.vc  interfaces.vc  ir.vc  iterators.vc  packages.vc  slices.vc  threads.vc  validation.vc
docs/vc-old/include/vc/: lexer.h
docs/vc-old/include/vc/basic/: file_buffer.h  report.h  token.h
docs/vc-old/include/vc/definitions/: types.def
docs/vc-old/lib/vc/ast/: decl_group.cpp  df_ast_visitor.cpp
docs/vc-old/lib/vc/basic/: token.cpp  token_precedence.cpp
docs/vc-old/lib/vc/parser/: parse_type.cpp
docs/vc-old/lib/vc/validation/: val.cpp
docs/vscode-extension/vclang/: package.json  vcir-language-configuration.json
docs/vscode-extension/vclang/syntaxes/: vc.tmLanguage.json  vcir.tmLanguage.json
docs/vscode-extention/syntaxes/: vc.tmLanguage.json
lang/lang/: allocator.vc  anon_methods.vc  atomic.vc  attributes.vc  basic variables.vc  basic_preprocessing.vc  bit-fields.vc  checked_and_unchecked.vc  compiler_settings.vc  copy_move.vc  ctors_and_dtors.vc  defer.vc  delegates.vc  extention_methods.vc  function pointers.vc  init lists.vc  inline_asm.vc  ir.vc  linq.vc  properties.vc  records.vc  reflect.vc  reflection.vc  structures.vc  towrite_spec  unions.vc  use_block.vc  using static.vc
lang/needs-sorting/langdoc/: Attributes.txt  Types.txt
lang/needs-sorting/langdoc/Declarations/: Allocator.txt  Namespaces.txt  Packages.txt
lang/needs-sorting/langdoc/Declarations/Enums/: Typed_Enum.txt
lang/needs-sorting/langdoc/Declarations/Functions/: Anonymous_Methods.txt  Extention_Methods.txt
lang/needs-sorting/langdoc/TODO/: Lexer.txt
lang/needs-sorting/langdoc/Variables/Initialization/: Named_Initialization.txt
lang/needs-sorting/langdoc/Variables/User_Defined_Types/: Structures.txt
lang/needs-sorting/langdoc2/Declarations/Modules/: Import.txt
lang/needs-sorting/langdoc2/Types/: Arrays.txt
lang/needs-sorting/langdoc2/Variables/Initialization/: Unnamed_Initialization.txt
lang/vc-old/include/vc/: compiler.h  opcode.h  opgen.h  parser.h  val.h
lang/vc-old/include/vc/basic/: token_precedence.h
lang/vc-old/include/vc/definitions/: decls.def  stmts.def
lang/vc-old/lib/vc/: compiler.cpp  opcode.cpp  opgen.cpp
src/: CMakeLists.txt
src/tests/: CMakeLists.txt  lexer_shared.h  lexer_tests.cpp  main.cpp  unit_test.cpp  unit_test.h
src/tests/ir/: ir_tests.cpp
src/tests/lexer/: basic.vc  comments.vc  lexer_comments.cpp  lexer_literals.cpp  lexer_tests.cpp  lexer_types.cpp  numerics.vc
src/tests/parser/: parser_tests.cpp
src/tests/test-src/lexer/: literals.vc  numerics.vc
src/tests/test_src/: test.vc
src/tests/test_src/ir/: ir_gen_test.vc  vector_math.asm  vector_math.cpp
src/tests/test_src/lexer/: keywords.vc
src/tests/test_src/parser/: fully-qualified-name.vc  hello_world.c  hello_world.ir  hello_world.vc  strings.vc
src/vc/: CMakeLists.txt  macros.h  types.h
src/vc/asm/: encoding.txt  x64.h  x86.h
src/vc/assembler/: assembler.cpp  assembler.h
src/vc/ast/: astprinter.cpp  astprinter.h  decl.h  declgroup.h  expr.h  name.cpp  name.h  stmt.h  type.h
src/vc/basic/: builtinkind.cpp  builtinkind.h  errorreport.h  filebuffer.cpp  filebuffer.h  sourcelocation.cpp  sourcelocation.h  token.cpp  token.h  tokenkind.cpp  tokenkind.h  tokenmap.cpp  tokenmap.h  tokenprecedence.cpp  tokenprecedence.h
src/vc/cgen/: cgen.h
src/vc/compiler/: lexer.cpp  lexer.h  parser.cpp  parser.h  parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  parser_type.cpp
src/vc/defs/: builtin_kinds.inl  builtinkinds.inl  tokenkinds.inl
src/vc/defs/lexer/: token_keywords.inl  token_kinds.inl  token_literals.inl  token_operators.inl  token_types.inl
src/vc/ir/: ir_example.ir  ir_example.vc  ir_example.vcir  ir_function.h  ir_gen.cpp  ir_gen.h  ir_module.h  ir_opcode.cpp  ir_opcode.h  ir_opcodelist.h  ir_printer.cpp  ir_printer.h  ir_struct.h  ir_type.h
src/vcc/: CMakeLists.txt  main.cpp
(+26 files in other folders)
